@@ -1,8 +1,9 @@
-# $NetBSD: Makefile,v 1.31 2004/01/20 12:07:43 agc Exp $
+# $NetBSD: Makefile,v 1.32 2004/01/28 13:00:44 xtraeme Exp $
 #
 
 DISTNAME=		snd
 PKGNAME=		snd-19980212
+PKGREVISION=		1
 CATEGORIES=		audio
 MASTER_SITES=		${MASTER_SITE_LOCAL}
 
@@ -14,7 +15,7 @@ NO_SRC_ON_FTP=		Already on MASTER_SITE_LOCAL
 
 WRKSRC=			${WRKDIR}
 USE_BUILDLINK2=		YES
-USE_X11BASE=		YES
+USE_X11=		YES
 
 MAKEFILE=		makefile.netbsd
 ALL_TARGET=		snd
