@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.4627 2004/01/28 12:55:30 xtraeme Exp $
+$NetBSD: CHANGES,v 1.4628 2004/01/28 13:01:28 xtraeme Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -513,3 +513,4 @@ Changes to the packages collection and infrastructure in 2004:
 	Updated electric to 6.05nb1 [xtraeme 2004-01-28]
 	Updated mpg123-nas to 0.59.18nb2 [xtraeme 2004-01-28]
 	Updated rosegarden to 2.1.4nb1 [xtraeme 2004-01-28]
+	Updated snd to 19980212nb1 [xtraeme 2004-01-28]
